K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stylegenie
  namespace: stylegenie
spec:
  selector:
    app: stylegenie
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
